crates/eure-macros/tests/compile_fail/object_key_tuple_variant.rs
use eure::ObjectKey;

#[derive(ObjectKey)]
enum Bad {
    Ok,
    Tuple(i32),
}

fn main() {}
