crates/eure-macros/tests/compile_fail/object_key_tuple_variant.stderr
error: ObjectKey only supports unit variants
 --> tests/compile_fail/object_key_tuple_variant.rs:6:5
  |
6 |     Tuple(i32),
  |     ^^^^^^^^^^
